--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "cs310",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "routes/index.js",
   "scripts": {
-    "watch": "nodemon ./start.js"
+    "watch": "nodemon ./start.js",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +14,14 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cypress": "^6.8.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11",
-    "pug": "^3.0.0"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
